*For best results, view this document using a Markdown reader.*

# Next Release

## Release Notes

## Details
- **New**: Added Bezier curve interpolation option to `CPTScatterPlot`.
- **New**: Added printing support to the OS X hosting view.
- **New**: Added a plot data label selection delegate method.



# Release 1.0 (February 20, 2012)

## Release Notes

This release contains changes that will break apps built against earlier Core Plot versions. `CPTPlotRange` has been split into mutable and immutable variants similar to `CPTLineStyle` and `CPTTextStyle`. This change will break existing code that changes plot ranges; that code should be updated to use the mutable versions. The `CPTBarPlotField` enum was changed so that the field values start at zero like all other plots. This will affect any existing code that used hard-coded values for the fields instead of the enum field names (`CPTBarPlotFieldBarLocation`, etc.). The `CPTNewCGColorFromNSColor()` function was renamed to `CPTCreateCGColorFromNSColor()` to conform to Apple's memory management naming conventions.

Core Plot now supports projects that use automatic reference counting (ARC). For compatibility with older systems, Core Plot itself does not use ARC but its header files and binaries can be used in applications that do.

## Details
- **New**: Added a script to automatically format the code following the coding standards using uncrustify.
- **New**: Added support for automatic reference counting (ARC).
- **New**: Added the HTML docs built with Doxygen to the source code repository so that they can be viewed online with a web browser.
- **New**: Added an `identifier` property to `CPTLayer`, replacing the one from `CPTPlot` and `CPTPlotGroup`.
- **New**: Added control chart and multi-colored bar plot examples to the Plot Gallery app.
- **New**: Added a mouse zoom user interface to the DropPlot app.
- **Changed**: Split `CPTPlotRange` into mutable and immutable variants.